--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     
     <h1>Hei verden!</h1>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-45Q0SDC9X4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-45Q0SDC9X4');
+</script>
+
 </body>
 </html>
