--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <h1>Hei verden!</h1>
 
+    <a href="#" class="lenke-knapp">Klikk her</a>
+    <button id="shop">Trykk her</button>
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-45Q0SDC9X4"></script>
